# arbitrary-rank-tutorial

./: .envrc  .gitignore  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  pyproject.toml  stack.nix  stack.yaml
.github/workflows/: ci.yaml
annotation/: .gitignore  annotation.tex  main.tex
arralac/: CHANGELOG.md  Setup.hs  arralac.cabal  package.yaml
free-foil-exercises/: free-foil-exercises.cabal  package.yaml
free-foil-exercises/src/: Exercises.hs  ExercisesFreeFoil.hs
free-foil-stlc/: CHANGELOG.md  Setup.hs  free-foil-stlc.cabal  package.yaml
free-foil-stlc/app/: Main.hs
free-foil-stlc/grammar/STLC/: Syntax.cf
free-foil-stlc/src/: BluefinImplicit.hs  Lib.hs
free-foil-stlc/test/data/: Lib.ms  Program.ms  Program.stlc  (+1 more)
presentation/: .gitignore  UoWstyle.sty  main.tex  ref.bib  slide.tex  styling.sty
scope-graphs-modular-stlc/: CHANGELOG.md  Setup.hs  package.yaml  scope-graphs-modular-stlc.cabal
scope-graphs-modular-stlc/app/: Main.hs
thesis/: ref.bib  thesis.tex
thesis/chapters/: Abstract.tex  AnalysisDiscussion.tex  Appendix.tex  Conclusion.tex  DesignImplementation.tex  DesignMethodology.tex  EvaluationDiscussion.tex  ImplementationResults.tex  Introduction.tex  LiteratureReview.tex
tutorial/: Setup.hs  arbitrary-rank-tutorial.cabal  package.yaml
tutorial/app/: Main.hs
tutorial/src/: BluefinImplicit.hs
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-extension/demo/: Program.arralac
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: arralac.tmLanguage.json
(+295 files in other folders)
