[tool.poetry]
name = "thesis-text"
version = "0.1.0"
description = ""
authors = ["Danila Danko"]
readme = "README.md"
packages = [{include = "thesis_text"}]

[tool.poetry.dependencies]
python = "^3.10"
pygments = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
